--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -16,3 +16,9 @@ jobs:
       - name: "Build & test"
         run: |
           echo "done!"
+      - uses: robinraju/release-downloader@v1.7
+        with:
+          repository: "DONTMERGE/flask-hello-world"
+          latest: true
+          tarBall: true
+          zipBall: true
