--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,26 +1,16 @@
 ---
-name: "pre-release"
+name: "release"
 
+name: "Publish GitHub Action"
 on:
   push:
-    branches:
-      - "master"
+    branches:    
+      - master
+      - main
 
 jobs:
-  pre-release:
-    name: "Pre Release"
-    runs-on: "ubuntu-latest"
-
+  publish:
+    runs-on: ubuntu-latest
     steps:
-      # ...
-      - name: "Build & test"
-        run: |
-          echo "done!"
-
-      - uses: "marvinpinto/action-automatic-releases@latest"
-        with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "latest"
-          prerelease: true
-          title: "Development Build"
-          files: README.md
+    - uses: actions/checkout@v1
+    - uses: tgymnich/publish-github-action@v1
