--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,3 +13,5 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - uses: tgymnich/publish-github-action@v1
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
