--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - uses: tgymnich/publish-github-action@v1
-      with:
-        github_token: ${{ secrets.TEST_TOKEN }}
+    - uses: actions/upload-artifact@v3
