--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -16,4 +16,4 @@ jobs:
     - uses: actions/download-artifact@v3
       with:
         name: my-artifact
-        path: path/to/artifact
+        path: my-artifact
