--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -8,12 +8,10 @@ on:
     types: 
       - completed
 jobs:
-  tagged-release:
-    name: "Tagged Release"
+  deploy-release:
+    name: "Deploy Release"
     runs-on: "ubuntu-latest"
 
     steps:
     - uses: actions/download-artifact@v3
-      with:
-        name: my-artifact
-        path: my-artifact
+
