Update and rename deploy-release.yml to cd.yml

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,9 +1,9 @@
 ---
-name: "deploy-release"
+name: "cd"
 
 on:
   workflow_run:
-    workflows: ["release"]
+    workflows: ["ci"]
     branches: [master]
     types: 
       - completed
