--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,4 +14,12 @@ jobs:
 
     steps:
     - uses: actions/download-artifact@v3
-
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
+    - name: Copy files to the test bucket with the AWS CLI
+      run: |
+        aws s3 cp my-artifact* s3://mybucket-yt-test/
