--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,6 +14,8 @@ jobs:
 
     steps:
     - uses: actions/download-artifact@v3
+      with:
+        path: .
     - name: Copy files to the test bucket with the AWS CLI
       run: |
         ls -al 
