--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/upload-artifact@v3
       with:
         name: my-artifact
-        path: README.md
+        path: .
   CD:
     runs-on: "ubuntu-latest"
     needs: ci
@@ -23,7 +23,7 @@ jobs:
     steps:
     - uses: actions/download-artifact@v3
       with:
-        path: *
+        path: .
     - name: Copy files to the test bucket with the AWS CLI
       run: |
         ls -al 
