--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -24,6 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: CI-Build
     steps:
+      - uses: actions/checkout@v3
       - name: "Check file existence"
         uses: andstor/file-existence-action@v2
         with:
